# haskell-iocp

./: .gitignore  Winsock.hsc  iocp.cabal
IOCP/: Clock.hs  FFI.hsc  Manager.hs  Manager2.hs  PSQ.hs  ThreadPool.hs  Worker.hs
cbits/: Winsock.c  dynamic.c  iocp.c
testing/: .gitignore  clock.hs  close-while-pending.hs  close-without-shutdown.hs  monotonic-time.hs  recv-bench.hs  recv.hs  send-buffer-full.hs  send-recv.hs  send.hs  trivial.hs
