name:               iocp
version:            0.1
synopsis:           Nursery for a GHC IO manager using Windows completion ports
-- description:
homepage:           https://github.com/joeyadams/haskell-iocp
license:            BSD3
license-file:       LICENSE
author:             Joey Adams
maintainer:         joeyadams3.14159@gmail.com
copyright:          Copyright (c) Joseph Adams 2012
category:           System
build-type:         Simple
cabal-version:      >=1.8

extra-source-files:

source-repository head
    type:       git
    location:   git://github.com/joeyadams/haskell-iocp.git

library
    exposed-modules:
        IOCP.Clock
        IOCP.FFI
        IOCP.Manager
        IOCP.Manager2
        IOCP.PSQ
        IOCP.Worker
        Winsock

    c-sources:
        cbits/dynamic.c
        cbits/iocp.c
        cbits/Winsock.c

    build-tools: hsc2hs

    ghc-options: -Wall -fwarn-tabs -fno-warn-missing-signatures
    cc-options: -Wall

    build-depends   : base == 4.*
                    , bytestring
                    , containers
                    , Win32
                    , network
